<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center"
    tools:context=".StopWatch"
    >

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txtHintEmail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/txtHintPassword"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtBtnLogin"
        android:textSize="15sp"
        tools:layout_editor_absoluteY="431dp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:text="@string/txtBtnRegistrar"
        android:textSize="15sp" />



</LinearLayout>